[project]
name = "dev-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.6",
    "gitpython>=3.1.44",
    "jira>=3.8.0",
    "jupyterlab>=4.3.5",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "semantic-version>=2.10.0",
    "semver>=3.0.4",
    "streamlit>=1.43.0",
    "toml>=0.10.2",
    "typer>=0.15.2",
]


[project.scripts]
semverer = "dev_utils:semverer"

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
